# lyrication-mini

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/lyrics/: lyrics_fetcher.rs  lyrics_line.rs  lyrics_manager.rs  mod.rs
src/now_playing/: mod.rs  now_playing_helper.rs  now_playing_info.rs  ns_dictionary_extensions.rs
